--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -25,7 +25,6 @@ jobs:
               run: |
                   git checkout -b release-with-more-clearity
                   git reset --hard $GITHUB_SHA
-                  git push -f origin release-with-more-clearity # force push the branch
             # Do the actual bundling
             - uses: actions/setup-node@v2
               with:
@@ -37,12 +36,9 @@ jobs:
             - name: The Actual Build
               working-directory: frontend-bundler
               run: npm run build
-            # I _think_ this "just" does `git add frontend-dist --force && git commit -m "Something" && git push origin release --force
-            # Might try that out later
-            - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version.
-              with:
-                  # Needs --force because frontend-dist is normally .gitignore'd
-                  add: "frontend-dist --force"
-                  branch: release
-                  push: "origin release-with-more-clearity --force"
-                  pull: "NO-PULL"
+            # Push the new changes
+            - name: Force push frontend-dist changes
+              run: |
+                  git add frontend-dist --force
+                  git commit -m "Parcel Bundle"
+                  git push origin release
