--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -45,4 +45,4 @@ jobs:
               run: |
                   git add frontend-dist --force
                   git commit -m "Parcel Bundle"
-                  git push origin release
+                  git push origin release-with-more-clearity
