--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -40,9 +40,11 @@ jobs:
             - name: The Actual Build
               working-directory: frontend-bundler
               run: npm run build
-            # Push the new changes
+            # Push the rebuild frontend-dist to the release branch.
+            # Needs to be `add --force` because frontend-dist is normally gitignored.
+            # Also needs `push --force` because we reset to main (which doesn't contain the previous frontend-dist)
             - name: Force push frontend-dist changes
               run: |
                   git add frontend-dist --force
                   git commit -m "Parcel Bundle"
-                  git push origin release-with-more-clearity
+                  git push origin release-with-more-clearity --force
