--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -17,10 +17,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Git Config
-              run: |
-                  git config --global user.email "github-action@users.noreply.github.com"
-                  git config --global user.name "GitHub Action"
+            - uses: fregante/setup-git-user@v1
+
             # Ignore the build changes from previous run.
             # This "just" hard resets to the latest commit on main.
             # The previous bundle commit will still exist, but will be "dangling", unless we made a tag for it.
@@ -29,6 +27,7 @@ jobs:
               run: |
                   git checkout -b release-with-more-clearity
                   git reset --hard $GITHUB_SHA
+
             # Do the actual bundling
             - uses: actions/setup-node@v2
               with:
@@ -40,6 +39,7 @@ jobs:
             - name: The Actual Build
               working-directory: frontend-bundler
               run: npm run build
+
             # Push the rebuild frontend-dist to the release branch.
             # Needs to be `add --force` because frontend-dist is normally gitignored.
             # Also needs `push --force` because we reset to main (which doesn't contain the previous frontend-dist)
