--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -25,7 +25,11 @@ jobs:
                   changelog: |
                     ## {{ package }} {{ version }}
                     
-                    > Try this release in your browser! https://binder.plutojl.org/{{ version }}/
+                    > Try this release in your browser! _(Available 30 minutes after the release)_
+                    > 
+                    > <a href="https://binder.plutojl.org/{{ version }}/"><img alt="Binder logo" src="https://mybinder.org/badge_logo.svg"></a>
+
+                    **Generate your own binder links using [pluto-on-binder.glitch.me](https://pluto-on-binder.glitch.me/)!**
 
                     {% if previous_release %}
                     [Diff since {{ previous_release }}]({{ compare_url }})
