--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -11,6 +11,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
+              # We use that PAT token instead of GITHUB_TOKEN because we are triggering another github action on the 'release' event.
+              # Triggering a workflow from a workflow is only allowed if the relaying event is signed with a PAT.
+              # See https://docs.github.com/en/actions/reference/events-that-trigger-workflows#triggering-new-workflows-using-a-personal-access-token
               with:
                 token: ${{ secrets.PAT_TOKEN }}
             - uses: fregante/setup-git-user@v1
