--- a/.github/workflows/FrontendTest.yml
+++ b/.github/workflows/FrontendTest.yml
@@ -8,6 +8,7 @@ on:
             - "**.md"
         branches:
             - main
+            - release
     pull_request:
         paths-ignore:
             - "**.md"
@@ -59,7 +60,7 @@ jobs:
             - name: Run tests
               working-directory: ./test/frontend
               run: |
-                  julia --project=$GITHUB_WORKSPACE -e "import Pluto; Pluto.run(port=$PLUTO_PORT, require_secret_for_access=false)" & # Run Pluto.jl server in the background
+                  julia -e "import Pkg; Pkg.add(path=\"$GITHUB_WORKSPACE\"); Pkg.instantiate(); import Pluto; Pluto.run(port=$PLUTO_PORT, require_secret_for_access=false)" & # Run Pluto.jl server in the background
 
                   # Wait for Pluto to initialize
                   TIMES_TRIED=0
@@ -72,6 +73,7 @@ jobs:
                   npm run test
               env:
                   PLUTO_PORT: 1235
+                  PLUTO_TEST_OFFLINE: ${{ github.ref_name == 'release' }}
                   PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: "true"
                   PUPPETEER_EXECUTABLE_PATH: "/usr/bin/google-chrome-stable"
 
