--- a/.github/workflows/FrontendTest.yml
+++ b/.github/workflows/FrontendTest.yml
@@ -12,6 +12,8 @@ on:
     pull_request:
         paths-ignore:
             - "**.md"
+        branches-ignore:
+            - release
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
