--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -16,6 +16,8 @@ on:
         paths-ignore:
             - "frontend/**"
             - "**.md"
+        branches-ignore:
+            - release
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
