--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -45,5 +45,5 @@ jobs:
             - name: Force push frontend-dist changes
               run: |
                   git add frontend-dist --force
-                  git commit -m "$GITHUB_WORKFLOW"
+                  git commit -m "$GITHUB_WORKFLOW" -m "Built from hash $GITHUB_SHA"
                   git push origin release --force
