--- a/frontend-bundler/package.json
+++ b/frontend-bundler/package.json
@@ -7,7 +7,7 @@
     "description": "",
     "scripts": {
         "start": "cd ../frontend && parcel --dist-dir ../frontend-dist --config ../frontend-bundler/.parcelrc editor.html index.html error.jl.html sample.html",
-        "build": "cd ../frontend && parcel build --public-url . --dist-dir ../frontend-dist --config ../frontend-bundler/.parcelrc editor.html index.html error.jl.html sample.html",
+        "build": "cd ../frontend && parcel build --no-source-maps --public-url . --dist-dir ../frontend-dist --config ../frontend-bundler/.parcelrc editor.html index.html error.jl.html sample.html",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
