--- a/Project.toml
+++ b/Project.toml
@@ -18,9 +18,10 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 MsgPack = "99f44e22-a591-53d1-9472-aa23ef4bd671"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PlutoRESTClient = "fe49e839-af43-4fee-8eb4-ecf92bc83904"
 REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
-Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 RelocatableFolders = "05181044-ff0b-4ac5-8273-598c1e38db00"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
