--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -9,6 +9,7 @@ on:
             - "frontend/**"
             - "frontend-bundler/**"
             - "frontend-dist/**"
+            - "test/frontend/**"
             - "**.md"
         branches:
             - main
