--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ Configurations = "0.15, 0.16, 0.17"
 FuzzyCompletions = "0.3,0.4,0.5"
 HTTP = "^0.9.1"
 MsgPack = "1.1"
-RelocatableFolders = "0.1"
+RelocatableFolders = "0.1, 0.2"
 Tables = "1"
 julia = "^1.6"
 
