--- a/.github/workflows/BenchmarkCompileTime.yml
+++ b/.github/workflows/BenchmarkCompileTime.yml
@@ -31,10 +31,5 @@ jobs:
             - uses: julia-actions/setup-julia@v1
             - uses: julia-actions/cache@v1
             - uses: julia-actions/julia-buildpkg@v1
-            - name: Benchmark without precompile directives
-              run: julia perf/compiletimes.jl
-              env:
-                PLUTO_COMPILE_TIMES_MODE: "without_precompile_directives"
-            - name: Benchmark with precompile directives
-              run: julia perf/compiletimes.jl
+            - run: julia perf/compiletimes.jl
 
