Add warning to output

--- a/.github/workflows/BenchmarkCompileTime.yml
+++ b/.github/workflows/BenchmarkCompileTime.yml
@@ -34,4 +34,6 @@ jobs:
             - name: Run the benchmarks
               run: julia perf/run-benchmark-compilation.jl
             - name: Show the benchmark results
-              run: cat perf/compiletimes.txt
+              run: |
+                echo "Beware that the reported times may differ between CPU (GitHub Runner). Look at allocations for more reliable estimates.\n\n"
+                cat perf/compiletimes.txt
