--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -33,7 +33,7 @@ jobs:
         strategy:
             matrix:
                 # We test quite a lot of versions because we do some OS and version specific things unfortunately
-                julia-version: ["1.6", "1.7"] #, "nightly"]
+                julia-version: ["1.6", "1.7", "~1.8.0-0"] #, "nightly"]
                 os: [ubuntu-latest, macOS-latest, windows-latest]
 
         steps:
