--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -5,6 +5,9 @@ on:
         branches:
             - main
     workflow_dispatch:
+concurrency:
+    group: bundle
+    cancel-in-progress: true
 
 jobs:
     trigger:
