--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.18.4"
 
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
+Configurations = "5218b696-f38b-4ac9-8b61-a12ec717816d"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FileWatching = "7b1f6079-737a-58dc-b8bc-7a2ca5c1b5ee"
@@ -24,6 +25,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
+Configurations = "0.15, 0.16, 0.17"
 FuzzyCompletions = "0.3,0.4,0.5"
 HTTP = "^0.9.1"
 MsgPack = "1.1"
@@ -32,7 +34,6 @@ Tables = "1"
 julia = "^1.6"
 
 [extras]
-Configurations = "5218b696-f38b-4ac9-8b61-a12ec717816d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -40,4 +41,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [targets]
-test = ["Configurations", "DataFrames", "OffsetArrays", "Random", "Test", "TimerOutputs"]
+test = ["DataFrames", "OffsetArrays", "Random", "Test", "TimerOutputs"]
