Reduce time to first `from_flat_kwargs` (#2005)
Co-authored-by: Fons van der Plas <fonsvdplas@gmail.com>

--- a/Project.toml
+++ b/Project.toml
@@ -43,4 +43,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [targets]
-test = ["Test", "Random", "DataFrames", "OffsetArrays", "TimerOutputs"]
+test = ["DataFrames", "OffsetArrays", "Random", "Test", "TimerOutputs"]
